[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/grade/Grade.gd" type="Script" id=2]
[ext_resource path="res://scenes/SceneTransition.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/Background.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/gold_medal.png" type="Texture" id=5]
[ext_resource path="res://assets/silver_medal.png" type="Texture" id=6]
[ext_resource path="res://assets/bronze_medal.png" type="Texture" id=7]
[ext_resource path="res://scenes/ui/Sidebar.tscn" type="PackedScene" id=8]

[node name="GradeScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="Sidebar" parent="." instance=ExtResource( 8 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
custom_constants/separation = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 980.0
margin_bottom = 660.0
custom_constants/separation = 56

[node name="DrawingGrid" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 768.0
margin_bottom = 660.0
rect_min_size = Vector2( 768, 660 )
columns = 3

[node name="MedalsCenter" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 824.0
margin_right = 924.0
margin_bottom = 660.0

[node name="MedalsVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MedalsCenter"]
margin_top = 120.0
margin_right = 100.0
margin_bottom = 540.0
custom_constants/separation = 60

[node name="Gold" type="TextureRect" parent="VBoxContainer/HBoxContainer/MedalsCenter/MedalsVBox"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 5 )
expand = true

[node name="Silver" type="TextureRect" parent="VBoxContainer/HBoxContainer/MedalsCenter/MedalsVBox"]
margin_top = 160.0
margin_right = 100.0
margin_bottom = 260.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 6 )
expand = true

[node name="Bronze" type="TextureRect" parent="VBoxContainer/HBoxContainer/MedalsCenter/MedalsVBox"]
margin_top = 320.0
margin_right = 100.0
margin_bottom = 420.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true

[node name="ButtonCenter" type="CenterContainer" parent="VBoxContainer"]
margin_top = 675.0
margin_right = 980.0
margin_bottom = 701.0

[node name="SubmitButton" type="Button" parent="VBoxContainer/ButtonCenter"]
margin_left = 443.0
margin_right = 537.0
margin_bottom = 26.0
text = "Submit"

[node name="SceneTransitionTween" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="VBoxContainer/ButtonCenter/SubmitButton" to="." method="submit_grade"]
